<?xml version="1.0"?>
<package>
  <name>IMU_Broadcast</name>
  <version>1.0.0</version>
  <description>The IMU broadcasting package</description>

  <maintainer email="nolan.m.smith@vanderbilt.edu">John</maintainer>

  <license>N/A</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
